# resnet-hpp

./: .gitignore  BasicBlock.hpp  CMakeLists.txt  bottleneck.hpp  defines.hpp  impl.hpp  readme.md  resnet.hpp
test/: CMakeLists.txt  cifar10.hpp  resnet-cifar-demo.cpp
